--- a/BlockchainCertifications/app/views/index.scala.html
+++ b/BlockchainCertifications/app/views/index.scala.html
@@ -1,5 +1,7 @@
 @()
 
-@main("Welcome to Play") {
-  <h1>Welcome to Play!</h1>
+@main("Home page") {
+  <h1>Welcome!</h1>
+  <h2>Store your diploma in Blockchain!</h2>
+  
 }
